--- a/index.html
+++ b/index.html
@@ -77,7 +77,20 @@
       </div>
     </article>
     
-    <article class="project">
+
+    <section class="projects">
+        <h3>🌦️ Bot météo pour X (Twitter)</h3>
+        <div class="project">
+            <p>
+            J’ai créé un bot automatisé avec <strong>Python</strong> qui publie une image météo toutes les 2 heures.
+            L’image affiche la météo actuelle en Nouvelle-Calédonie.
+            </p>
+            <a href="https://x.com/NC_Meteo" target="_blank" class="x-button">Voir le compte X</a>
+        </div>
+    </section>
+
+        <article class="project">
+        <h2>🖥️ Gadget indispensable !</h2>
         <h3>🔐 Flipper Zero</h3>
         <p>Voici un Flipper zero, un outil très utile en terme de cybersécurité ! Il peut émuler une Yubikey sans problème, ou encore déranger les utilisateurs d'Iphone avec des attaques Bluetooth innofensives ;)  </p>
 
@@ -91,32 +104,13 @@
             </p>
         </div>
     </article>
-  </section>
-
-
-
-    <section class="projects">
-    <h2>Projets</h2>
-
-    <div class="project">
-        <h3>🌦️ Bot météo pour X (Twitter)</h3>
-        <p>
-        J’ai créé un bot automatisé avec <strong>Python</strong> qui utilise deux APIs (OpenWeather + X API) pour publier une image météo toutes les 2 heures.
-        L’image affiche la météo actuelle en Nouvelle-Calédonie.
-        </p>
-
-        <a href="https://x.com/NC_Meteo" target="_blank" class="x-button">Voir le compte X</a>
-    </div>
-    </section>
-
 
   <section class="contact">
     <h2>Me contacter</h2>
-    <p>Tu veux bosser avec moi, m'envoyer un meme, ou me recommander un bon OS léger pour un vieux Celeron ?</p>
+    <p>✌️</p>
     <ul>
-      <li>📧 Email : <a href="mailto:virgil@bidouille.tech">virgil@bidouille.tech</a></li>
+      <li>📧 Email : <a href="mailto:karatemarine@gmail.com">karatemarine@gmail.com</a></li>
       <li>🐙 GitHub : <a href="https://github.com/Vin-svg" target="_blank">github.com/Vin-svg</a></li>
-      <li>💬 Discord : Virgil#1234</li>
     </ul>
   </section>
 
