--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lieeexxx's portfolio</title>
+  <title>Hey, I am Lieeexxx</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/powerglitch@latest/dist/powerglitch.min.js"></script>
 </head>
